--- a/src/Pages/OrderDetails/_order_details.scss
+++ b/src/Pages/OrderDetails/_order_details.scss
@@ -171,6 +171,15 @@
         background-color: green;
       }
     }
+
+    .order-actions {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 24px;
+      width: 100%;
+      margin: 32px 0 0 0;
+    }
   }
 
 
